Fix/change email form

--- a/index.html
+++ b/index.html
@@ -216,7 +216,6 @@
               <i class="devicon-html5-plain-wordmark colored" title="HTML5"></i>
               <i class="devicon-javascript-plain-wordmark colored" title="JavaScript"></i>
               <i class="devicon-jquery-plain-wordmark colored" title="jQuery"></i>
-              <i class="devicon-mongodb-plain-wordmark colored" title="MongoDB"></i>
               <i class="devicon-nodejs-plain-wordmark colored" title="Node JS"></i>
               <i class="devicon-rails-plain-wordmark colored" title="Rails"></i>
               <i class="devicon-react-original-wordmark colored" title="React"></i>
@@ -252,7 +251,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-          <form name="sentMessage" id="contactForm" novalidate="novalidate">
+          <form name="sentMessage" id="contactForm" novalidate="novalidate" method="POST" action="https://formspree.io/dtersoff@gmail.com">
             <div class="control-group">
               <div class="form-group floating-label-form-group controls mb-0 pb-2">
                 <label>Name</label>
@@ -301,24 +300,18 @@
         <!-- Footer Location -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Location</h4>
-          <p class="lead mb-0">2215 John Daniel Drive
-            <br>Clark, MO 65243</p>
+          <p class="lead mb-0">Wayland, MA 01778
         </div>
 
         <!-- Footer Social Icons -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Around the Web</h4>
-          <a class="btn btn-outline-light btn-social mx-1" href="#">
-            <i class="fab fa-fw fa-facebook-f"></i>
           </a>
-          <a class="btn btn-outline-light btn-social mx-1" href="#">
-            <i class="fab fa-fw fa-twitter"></i>
-          </a>
-          <a class="btn btn-outline-light btn-social mx-1" href="#">
+          <a class="btn btn-outline-light btn-social mx-1" href="www.linkedin.com/in/david-tersoff">
             <i class="fab fa-fw fa-linkedin-in"></i>
           </a>
-          <a class="btn btn-outline-light btn-social mx-1" href="#">
-            <i class="fab fa-fw fa-dribbble"></i>
+          <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/dtersoff">
+            <i class="fab fa-fw fa-github"></i>
           </a>
         </div>
 
@@ -511,10 +504,6 @@
 
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-  <!-- Contact Form JavaScript -->
-  <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script>
 
   <!-- Custom scripts for this template -->
   <script src="js/freelancer.min.js"></script>
