--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Around the Web</h4>
           </a>
-          <a class="btn btn-outline-light btn-social mx-1" href="www.linkedin.com/in/david-tersoff">
+          <a class="btn btn-outline-light btn-social mx-1" href="http://www.linkedin.com/in/david-tersoff">
             <i class="fab fa-fw fa-linkedin-in"></i>
           </a>
           <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/dtersoff">
