--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
       <!-- About Section Button -->
       <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="">
+        <a class="btn btn-xl btn-outline-light" href="./resume/DavidTersoffResume.pdf" target="_blank">
           <i class="fas fa-download mr-2"></i>
           Resume
         </a>
@@ -307,11 +307,11 @@
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Around the Web</h4>
           </a>
-          <a class="btn btn-outline-light btn-social mx-1" href="http://www.linkedin.com/in/david-tersoff">
-            <i class="fab fa-fw fa-linkedin-in"></i>
+          <a class="btn btn-outline-light btn-social mx-1" href="http://www.linkedin.com/in/david-tersoff" target="_blank">
+            <i class="fab fa-fw fa fa-linkedin-in"></i>
           </a>
-          <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/dtersoff">
-            <i class="fab fa-fw fa-github"></i>
+          <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/dtersoff" target="_blank">
+            <i class="fab fa-fw fa fa-github"></i>
           </a>
         </div>
 
