Hopefully fix fontawesome issue

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>David Tersoff Portfolio</title>
 
   <!-- Custom fonts for this theme -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
@@ -37,7 +37,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">David Tersoff</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
-        <i class="fas fa-bars"></i>
+        <i class="fa fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
@@ -72,7 +72,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fa fa-star"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -94,7 +94,7 @@
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fa fa-star"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -108,7 +108,7 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
+                <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/fgo1.png" alt="">
@@ -120,7 +120,7 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
+                <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/chat-app.png" alt="">
@@ -132,7 +132,7 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
+                <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/fgo2.png" alt="">
@@ -144,7 +144,7 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
+                <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/tictactoe.png" alt="">
@@ -166,7 +166,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fa fa-star"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -181,7 +181,7 @@
       <!-- About Section Button -->
       <div class="text-center mt-4">
         <a class="btn btn-xl btn-outline-light" href="./resume/DavidTersoffResume.pdf" target="_blank">
-          <i class="fas fa-download mr-2"></i>
+          <i class="fa fa-download mr-2"></i>
           Resume
         </a>
       </div>
@@ -198,7 +198,7 @@
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fa fa-star"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -241,7 +241,7 @@
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fa fa-star"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -308,7 +308,7 @@
           <h4 class="text-uppercase mb-4">Around the Web</h4>
           </a>
           <a class="btn btn-outline-light btn-social mx-1" href="http://www.linkedin.com/in/david-tersoff" target="_blank">
-            <i class="fab fa-fw fa fa-linkedin-in"></i>
+            <i class="fab fa-fw fa fa-linkedin"></i>
           </a>
           <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/dtersoff" target="_blank">
             <i class="fab fa-fw fa fa-github"></i>
@@ -348,7 +348,7 @@
       <div class="modal-content">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">
-            <i class="fas fa-times"></i>
+            <i class="fa fa-times"></i>
           </span>
         </button>
         <div class="modal-body text-center">
@@ -361,7 +361,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
+                    <i class="fa fa-star"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
@@ -370,7 +370,7 @@
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">A single page application for playing Tic Tac Toe. <a href="https://github.com/dtersoff/tic-tac-toe" target="_blank">See repo here.</a></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
+                  <i class="fa fa-times fa-fw"></i>
                   Close Window
                 </button>
               </div>
@@ -387,7 +387,7 @@
       <div class="modal-content">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">
-            <i class="fas fa-times"></i>
+            <i class="fa fa-times"></i>
           </span>
         </button>
         <div class="modal-body text-center">
@@ -400,7 +400,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
+                    <i class="fa fa-star"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
@@ -409,7 +409,7 @@
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">An app for keeping track of characters and stats in the mobile game Fate/Grand Order. Built with Rails and HTML using Handlebars. <a href="https://github.com/dtersoff/full-stack-project" target="_blank">See repo here.</a></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
+                  <i class="fa fa-times fa-fw"></i>
                   Close Window
                 </button>
               </div>
@@ -426,7 +426,7 @@
       <div class="modal-content">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">
-            <i class="fas fa-times"></i>
+            <i class="fa fa-times"></i>
           </span>
         </button>
         <div class="modal-body text-center">
@@ -439,7 +439,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
+                    <i class="fa fa-star"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
@@ -448,7 +448,7 @@
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">A chatroom application, made with a team of three other developers. <a href="https://github.com/sei-04-team-3/group-project-client" target="_blank">See repo here.</a></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
+                  <i class="fa fa-times fa-fw"></i>
                   Close Window
                 </button>
               </div>
@@ -465,7 +465,7 @@
       <div class="modal-content">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">
-            <i class="fas fa-times"></i>
+            <i class="fa fa-times"></i>
           </span>
         </button>
         <div class="modal-body text-center">
@@ -478,7 +478,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
+                    <i class="fa fa-star"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
@@ -487,7 +487,7 @@
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">A ground-up rebuild of the previous Fate/Grand Order app, using Express and React instead of Rails and Handlebars, with additional features added. <a href="https://github.com/dtersoff/fate-calculator-2-client" target="_blank">See repo here.</a></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
+                  <i class="fa fa-times fa-fw"></i>
                   Close Window
                 </button>
               </div>
