--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg">
-          <p class="lead">I am a software engineer with a passion for breaking down complex problems into simple effective algorithms.</p>
+          <p class="lead">I am a software engineer, musician, gamer, and avid comic book nerd, with a passion for finding, learning, and building elegant algorithms and programs to solve complex problems. Even when I suffer setbacks, once I've set my mind on a task, I'm driven to complete it.</p>
         </div>
       </div>
 
