Updating portfolio and resume

--- a/index.html
+++ b/index.html
@@ -102,6 +102,17 @@
       <!-- Portfolio Grid Items -->
       <div class="row">
 
+        <!-- Portfolio Item 1 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fa fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/tictactoe.png" alt="">
+          </div>
+        </div>
 
         <!-- Portfolio Item 2 -->
         <div class="col-md-6 col-lg-4">
@@ -139,17 +150,18 @@
           </div>
         </div>
 
-        <!-- Portfolio Item 1 -->
+        <!-- Portfolio Item 5 -->
         <div class="col-md-6 col-lg-4">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/tictactoe.png" alt="">
+            <img class="img-fluid" src="img/portfolio/villagr.png" alt="">
           </div>
         </div>
+
       <!-- /.row -->
 
     </div>
@@ -486,6 +498,45 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/fgo2.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">A ground-up rebuild of the previous Fate/Grand Order app, using Express and React instead of Rails and Handlebars, with additional features added. <a href="https://github.com/dtersoff/fate-calculator-2-client" target="_blank">See repo here.</a></p>
+                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                  <i class="fa fa-times fa-fw"></i>
+                  Close Window
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Portfolio Modal 5 -->
+  <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-labelledby="portfolioModal5" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fa fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Portfolio Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">FGO Calculator V2</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fa fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <!-- Portfolio Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/villagr.png" alt="">
+                <!-- Portfolio Modal - Text -->
+                <p class="mb-5">A group project made during General Assembly's Small Business Hackathon, allowing a user to search for businesses most heavily impacted by COVID-19, for the purposes of helping them recover.</p><a href="https://villagr-client.herokuapp.com/" target="_blank">Live App</a> - <a href="https://github.com/benritter522/service-one-client" target="_blank">Github Repo</a></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fa fa-times fa-fw"></i>
                   Close Window
